[package]
name = "nyancatchat-ng"
version = "0.1.0"
edition = "2021"

[dependencies]
socketioxide = { version = "0.15.1", features = ["state", "tracing"]}
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
axum = "0.7.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.5.0", features = ["cors"] }
tower = "0.4"
chrono = { version = "0.4", features = ["serde"] }