[package]
name = "nyancatchat-ng"
version = "1.0.2-test.1"
edition = "2021"
readme = "README.md"
rust-version = "1.85.0"
homepage = "https://stenstromen.se"
repository = "https://github.com/stenstromen/nyancatchat-ng"
description = "NyanCatChat-NG, a chat application built with Rust and Socket.IO."

[dependencies]
socketioxide = { version = "0.16.2", features = ["state", "tracing"]}
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
axum = "0.7.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.6.2", features = ["cors"] }
tower = "0.5"
chrono = { version = "0.4", features = ["serde"] }
aes-gcm = "0.10.3"
base64 = "0.22.1"
rand = "0.9.1"
